<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/detail_btn_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/detail_button_back"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/home_toolbar_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_profile"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBlue"
                app:layout_scrollFlags="scroll|snap">

                <ProgressBar
                    android:id="@+id/detail_progress"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="100dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/detail_iv_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/detail_profile_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/img_github_logo" />

                <TextView
                    android:id="@+id/repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/detail_repositories"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/followers"
                    app:layout_constraintEnd_toStartOf="@+id/followers"
                    app:layout_constraintTop_toTopOf="@+id/followers" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/detail_following"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/followers"
                    app:layout_constraintStart_toEndOf="@+id/followers"
                    app:layout_constraintTop_toTopOf="@+id/followers" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/detail_follower"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_iv_profile"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/repositories"
                    app:layout_constraintEnd_toEndOf="@+id/repositories"
                    app:layout_constraintStart_toStartOf="@+id/repositories" />

                <TextView
                    android:id="@+id/detail_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/followers"
                    app:layout_constraintEnd_toEndOf="@+id/followers"
                    app:layout_constraintStart_toStartOf="@+id/followers" />

                <TextView
                    android:id="@+id/detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/following"
                    app:layout_constraintEnd_toEndOf="@+id/following"
                    app:layout_constraintStart_toStartOf="@+id/following" />

                <ImageView
                    android:id="@+id/ic_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/ic_profile"
                    android:src="@drawable/ic_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_iv_profile" />

                <TextView
                    android:id="@+id/detail_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_profile"
                    app:layout_constraintTop_toTopOf="@+id/ic_profile" />

                <ImageView
                    android:id="@+id/ic_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/ic_location"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ic_profile" />

                <TextView
                    android:id="@+id/detail_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_location"
                    app:layout_constraintTop_toTopOf="@+id/ic_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/bg_detail_tabs"
                app:tabIndicatorColor="@color/colorPink"
                app:tabTextColor="@color/colorWhite" />

        </com.google.android.material.appbar.AppBarLayout>
        
        <androidx.core.widget.NestedScrollView
            android:id="@+id/detail_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"/>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detail_floatingAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorPink"
            app:borderWidth="0dp"
            android:visibility="visible"
            android:src="@drawable/ic_favorite_favorite_unfilled"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

